--- a/Backend/.env
+++ b/Backend/.env
@@ -1,7 +1,15 @@
 DEBUG=True
-SECRET_KEY = 'django-insecure-0+u99!##l5abq3(kjimj8&t-pnc0r5@r7jg3t072*zwqm!8w-x'
+SECRET_KEY=django-insecure-0+u99!##l5abq3(kjimj8&t-pnc0r5@r7jg3t072*zwqm!8w-x
+
 DB_NAME=railway
 DB_USER=root
-DB_PASSWORD='cQtCBZIPH0ejonbhMtyHHUdTwASYBRd0'
+DB_PASSWORD=cQtCBZIPH0ejonbhMtyHHUdTwASYBRd0
 DB_HOST=mysql.railway.internal
 DB_PORT=3306
+
+EMAIL_HOST=smtp.skymail.net.br
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_USE_SSL=False
+EMAIL_HOST_USER=fernando@murashima.com.br
+EMAIL_HOST_PASSWORD=Ftju7439@@
