--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,11 +1,11 @@
-django==4.2.11
-djangorestframework==3.14.0
-markdown==3.5.2
+asgiref==3.8.1
+Django==4.2.11
+django-cors-headers==4.7.0
 django-filter==24.1
-django-cors-headers
+djangorestframework==3.14.0
+Markdown==3.5.2
 mysqlclient==2.2.4
-gunicorn==21.2.0
-python-decouple
-
-
-
+python-decouple==3.8
+pytz==2025.2
+sqlparse==0.5.3
+tzdata==2025.2
